--- a/cicd/task.yml
+++ b/cicd/task.yml
@@ -1,12 +1,14 @@
 ---
+# This file exist for debugging purposes.
 platform: linux
 
 image_resource:
   type: docker-image
-  source: 
-    repository: ken343/sdlenv
-    tag: 0.0.1
+  source:  {repository: ken343/sdlenv, tag: 0.0.1}
 
+inputs:
+  - name: cicd
 
-
-run: ./howdy.sh
+run:
+  path: sh
+  args: [cicd/howdy.sh]
