--- a/cicd/pipeline.yml
+++ b/cicd/pipeline.yml
@@ -26,4 +26,4 @@ jobs:
               
           run:
               path: sh
-              agrs: [resource-git-mr/go/src/github.com/JosephZoeller/maritime-royale/cicd/build_server.sh]
+              args: [go/src/github.com/JosephZoeller/maritime-royale/cicd/build_server.sh]
