--- a/cicd/pipeline.yml
+++ b/cicd/pipeline.yml
@@ -18,7 +18,7 @@ jobs:
           image_resource:
               type: docker-image
               source: {repository: ken343/sdlenv, tag: 0.0.1}
-          
+          # Need to add a new input for scripts
           inputs:
             - name: resource-git-mr
               path: go/src/github.com/JosephZoeller/maritime-royale
